# Music-player

./: .gitignore  AndroidManifest.xml  Music-player.txt  README.md  app.txt  check.py  check_jammer.py.bak  compile.sh  gradle.txt  gradlew  me explica aí.txt  remove.sh  settings.gradle.kts
.github/workflows/: build.yml  build.yml.bak
app/: build.gradle.kts
app/keystore/: testkey.jks  testkey.p12
app/src/main/: AndroidManifest.xml
app/src/main/assets/html/: faq.html  tutorial.html
app/src/main/java/android/kimyona/jammer/: JammerApp.kt  MainActivity.kt  PlayerActivity.kt  RustBridge.kt
app/src/main/java/android/kimyona/jammer/data/: JammerDatabase.kt
app/src/main/java/android/kimyona/jammer/service/: JammerPlaybackService.kt
app/src/main/java/android/kimyona/jammer/ui/: MainActivity.kt  PlayerActivity.kt  TrackAdapter.kt
app/src/main/java/android/kimyona/jammer/util/: WeakRefRunnable.kt
app/src/main/res/drawable/: ic_drag_handle.xml  ic_favorite_filled.xml  ic_queue.xml  ic_repeat.xml  ic_repeat_one.xml  ic_shuffle.xml
app/src/main/res/layout/: activity_html_popup.xml  activity_main.xml  activity_onboarding.xml  activity_player.xml  activity_settings.xml  fragment_library.xml  fragment_player.xml  fragment_queue.xml  item_queue.xml  item_track.xml  mini_player.xml
app/src/main/res/menu/: main_menu.xml  track_context_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: build.gradle.app
rust_scanner/: Cargo.toml
rust_scanner/src/: lib.rs
src/: MainActivity.java  shell.kt
(+26 files in other folders)
