[package]
name = "jammer_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "jammer_scanner"
crate-type = ["cdylib"]

[dependencies]
walkdir = "2.4"
lofty = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
strip = true